--- a/package.json
+++ b/package.json
@@ -1,32 +1,39 @@
 {
-    "name": "sonokai",
-    "displayName": "Sonokai",
+    "name": "sonokai-pro",
+    "displayName": "Sonokai Pro Theme",
     "description": "High Contrast & Vivid Color Scheme based on Monokai Pro",
-    "version": "0.2.9",
-    "publisher": "sainnhe",
-    "author": "sainnhe (https://github.com/sainnhe)",
-    "homepage": "https://github.com/sainnhe/sonokai-vscode",
+    "version": "0.3.0",
+    "publisher": "slava0135",
+    "author": {
+        "name": "slava0135",
+        "url": "https://github.com/Slava0135"
+    },
+    "homepage": "https://github.com/slava0135/sonokai-pro-vscode",
     "repository": {
         "type": "git",
-        "url": "https://github.com/sainnhe/sonokai-vscode.git"
+        "url": "https://github.com/slava0135/sonokai-pro-vscode.git"
     },
     "bugs": {
-        "url": "https://github.com/sainnhe/sonokai-vscode/issues"
+        "url": "https://github.com/slava0135/sonokai-pro-vscode/issues"
     },
+    "icon": "sonokai-pro.png",
     "license": "MIT",
-    "keywords": [
-        "monokai",
-        "theme"
-    ],
     "galleryBanner": {
         "color": "#2a2f38",
         "theme": "dark"
     },
     "engines": {
-        "vscode": "^1.43.0"
+        "vscode": "^1.100.0"
     },
     "categories": [
         "Themes"
+    ],
+    "keywords": [
+        "monokai",
+        "material",
+        "dark",
+        "theme",
+        "contrast"
     ],
     "contributes": {
         "themes": [
